fixed alignment issue with nav bar and white verticle line

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -118,7 +118,7 @@
           min-width: 7.5rem;
           height: 2.75rem;
           line-height: 2.75rem;
-          padding: 0 1.25rem 0 (1.25rem + _font(letter-spacing));
+          padding: 0 0.2rem 0 (0.2rem + _font(letter-spacing));
           text-transform: uppercase;
           letter-spacing: _font(letter-spacing);
           font-size: 0.8rem;
@@ -126,7 +126,7 @@
           border: none;
           box-shadow: none;
           border-radius: 0px;
-          background-color: _palette(bg);
+          background-color: transparent;
 
           &:hover,
           &:focus {
